<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:id="@+id/characterListFragment"
            android:icon="@drawable/ic_character"
            android:title="@string/all_characters">
        </item>

        <item android:id="@+id/characterSearchFragment"
            android:icon="@drawable/ic_character_search"
            android:title="@string/search_character">
        </item>

    </group>
    <group android:checkableBehavior="single">

        <item
            android:icon="@drawable/ic_episodes"
            android:id="@+id/episodeListFragment"
            android:title="@string/all_episodes">
        </item>

    </group>
    <group android:checkableBehavior="single">

        <item
            android:icon="@drawable/ic_person"
            android:id="@+id/profileFragment"
            android:title="@string/profile">
        </item>

    </group>

</menu>