<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    tools:context=".fragments.userLogin.SignUpFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:scaleType="centerCrop"
        android:id="@+id/icon"
        android:elevation="@dimen/_10sdp"
        app:shapeAppearanceOverlay="@style/roundedImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_icon_svg"
        app:layout_constraintBottom_toTopOf="@id/container"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_120sdp" />

    <com.google.android.material.card.MaterialCardView
        android:backgroundTint="?colorOnSurface"
        android:layout_margin="@dimen/_20sdp"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_20sdp"
        app:cardElevation="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon"
        app:layout_constraintBottom_toTopOf="@id/btn_login"
        app:layout_constraintVertical_bias="0.5">

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progressBar"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="@dimen/_15sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                app:layout_constraintTop_toTopOf="parent"
                android:textStyle="bold"
                android:id="@+id/ph2"
                android:text="@string/signUpScreenHeaderText"
                android:textColor="?colorSurface"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/_21ssp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <!--                name-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/_10sdp"
                style="@style/textInputLayoutDefaultDesign"
                android:hint="@string/name"
                app:startIconDrawable="@drawable/ic_person"
                android:id="@+id/et_name_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ph2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textInputEditTextDefaultDesign"
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--                email-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/textInputLayoutDefaultDesign"
                android:hint="@string/email"
                app:startIconDrawable="@drawable/ic_email"
                android:id="@+id/et_email_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:endIconMode="clear_text"
                app:layout_constraintTop_toBottomOf="@id/et_name_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textInputEditTextDefaultDesign"
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--                password-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/textInputLayoutDefaultDesign"
                android:hint="@string/password"
                app:startIconDrawable="@drawable/ic_password"
                android:id="@+id/et_password_container"
                app:endIconMode="password_toggle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_email_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textInputEditTextDefaultDesign"
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--                confirmPassword-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/textInputLayoutDefaultDesign"
                android:hint="@string/confirm_password"
                app:startIconDrawable="@drawable/ic_password"
                android:id="@+id/et_confirm_password_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:endIconMode="password_toggle"
                app:layout_constraintTop_toBottomOf="@id/et_password_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textInputEditTextDefaultDesign"
                    android:id="@+id/et_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignUp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/sign_up"
                app:cornerRadius="@dimen/_10sdp"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_15ssp"
                android:textAllCaps="false"
                android:textColor="?colorOnSurface"
                android:backgroundTint="?colorSurface"
                app:layout_constraintTop_toBottomOf="@id/et_confirm_password_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:padding="@dimen/_10sdp"
        android:elevation="@dimen/_10sdp"
        android:id="@+id/btn_login"
        android:gravity="center"
        android:layout_margin="@dimen/_30sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/existing_user"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="?colorOnSurface"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/login"
            android:textStyle="bold"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="?colorOnSurface"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatImageView
        android:visibility="gone"
        android:id="@+id/progressBackground"
        android:background="#6C6C6C"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>